# PiDP

./: CMakeLists.txt  ads
lab1/: lab1_1.c  lab1_2.c  lab1_3.c  lab1_4.c
lab2/: lab2_1.c  lab2_2.c  lab2_3.c
lab3/: lab3_1.c  lab3_2.c
